Fixing it properly; white-space: pre-wrap.

--- a/public/css/master.less
+++ b/public/css/master.less
@@ -153,6 +153,7 @@ code.ghost {
 }
 
 .code {
+	white-space: pre-wrap;
 	padding: @paste-content-padding;
 	.box-sizing(border-box);
 
